--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +34,7 @@
     "  'int_string': lambda x: [int(y) for y in x]\n",
     "}\n",
     "\n",
+    "# TODO: replace with nx\n",
     "def search(start, get_neighbors, end_condition=lambda _, __: False, method='dfs', permutations=False):\n",
     "    q, visited = [(0, start)] if method == 'dijkstra' else deque([(0, start)]), {}\n",
     "    while q:\n",
@@ -1196,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1206,7 @@
        "(1404, 1010981)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,22 +1262,394 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def arrow_map():\n",
+    "    g = nx.DiGraph()\n",
+    "    g.add_nodes_from('<>v^A')\n",
+    "    rights = [('<', 'v'), ('v', '>'), ('^', 'A')]\n",
+    "    lefts = [(x[1], x[0]) for x in rights]\n",
+    "    ups = [('v', '^'), ('>', 'A')]\n",
+    "    downs = [(x[1], x[0]) for x in ups]\n",
+    "    g.add_edges_from(rights, d='>')\n",
+    "    g.add_edges_from(ups, d='^')\n",
+    "    g.add_edges_from(lefts, d='<')\n",
+    "    g.add_edges_from(downs, d='v')\n",
+    "    ds = nx.get_edge_attributes(g, 'd')\n",
+    "    return g, ds\n",
+    "\n",
+    "def num_map():\n",
+    "    g = nx.DiGraph()\n",
+    "    for i in range(10):\n",
+    "        g.add_node(str(i))\n",
+    "    g.add_node('A')\n",
+    "    rights = [('0', 'A'), ('1', '2'), ('2', '3'), ('4', '5'), ('5', '6'), ('7', '8'), ('8', '9')]\n",
+    "    lefts = [(x[1], x[0]) for x in rights]\n",
+    "    ups = [('0', '2'), ('A',  '3'), ('1', '4'), ('2', '5'), ('3', '6'), ('4', '7'), ('5', '8'), ('6', '9')]\n",
+    "    downs = [(x[1], x[0]) for x in ups]\n",
+    "    g.add_edges_from(rights, d='>')\n",
+    "    g.add_edges_from(ups, d='^')\n",
+    "    g.add_edges_from(lefts, d='<')\n",
+    "    g.add_edges_from(downs, d='v')\n",
+    "    ds = nx.get_edge_attributes(g, 'd')\n",
+    "    return g, ds\n",
+    "\n",
+    "nmap = num_map()\n",
+    "amap = arrow_map()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['###############', '#...#...#.....#', '#.#.#.#.#.###.#', '#S#...#.#.#...#', '#######.#.#.###', '#######.#.#...#', '#######.#.###.#', '###..E#...#...#', '###.#######.###', '#...###...#...#', '#.#####.#.###.#', '#.#...#.#.#...#', '#.#.#.#.#.#.###', '#...#...#...###', '###############']\n"
+      "A 0 2\n",
+      "0 2 2\n",
+      "2 9 2\n",
+      "9 A 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_shortest(i, n):\n",
+    "    a, b = i\n",
+    "    print(a, b, n)\n",
+    "\n",
+    "\n",
+    "def press_code(code):\n",
+    "    result = get_shortest('A'+code[0], 2)\n",
+    "    for i in range(len(code)-1):\n",
+    "        get_shortest(code[i:i+2], 2)\n",
+    "    return result\n",
+    "\n",
+    "press_code('029A')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['<A']\n",
+      "{'01': 'v<<A>>^Av<A<A>>^AvAA<^A>A', '02': 'v<<A>>^AvA^A', '03': 'v<<A>>^Av<A>>A^A<A>A', '04': 'v<<A>>^AAv<A<A>>^AvAA<^A>A', '05': 'v<<A>>^AAvA^A', '06': 'v<<A>>^AAv<A>>A^A<A>A', '07': 'v<<A>>^AAAv<A<A>>^AvAA<^A>A', '08': 'v<<A>>^AAAvA^A', '09': 'v<<A>>^AAAv<A>>A^A<A>A', '0A': 'v<A>^A<A>A', '10': 'v<A>^Av<<A>>^AvA<^A>A', '12': 'v<A>^A<A>A', '13': 'v<A>^AA<A>A', '14': 'v<<A>>^AvA^A', '15': 'v<<A>>^Av<A>>A^A<A>A', '16': 'v<<A>>^Av<A>>A^AA<A>A', '17': 'v<<A>>^AAvA^A', '18': 'v<<A>>^AAv<A>>A^A<A>A', '19': 'v<<A>>^AAv<A>>A^AA<A>A', '1A': 'v<A>^AAv<<A>>^AvA<^A>A', '20': 'v<A<A>>^AvA<^A>A', '21': 'v<A<AA>>^AvAA<^A>A', '23': 'v<A>^A<A>A', '24': 'v<<A>>^Av<A<A>>^AvAA<^A>A', '25': 'v<<A>>^AvA^A', '26': 'v<<A>>^Av<A>>A^A<A>A', '27': 'v<<A>>^AAv<A<A>>^AvAA<^A>A', '28': 'v<<A>>^AAvA^A', '29': 'v<<A>>^AAv<A>>A^A<A>A', '2A': 'v<A<A>>^AvAA^A<A>A', '30': 'v<A<A>>^Av<<A>>^AvAA<^A>A', '31': 'v<A<AA>>^AAvAA<^A>A', '32': 'v<A<AA>>^AvAA<^A>A', '34': 'v<<A>>^Av<A<A>>^AAvAA<^A>A', '35': 'v<<A>>^Av<A<A>>^AvAA<^A>A', '36': 'v<<A>>^AvA^A', '37': 'v<<A>>^AAv<A<A>>^AAvAA<^A>A', '38': 'v<<A>>^AAv<A<A>>^AvAA<^A>A', '39': 'v<<A>>^AAvA^A', '3A': 'v<A<A>>^AvA<^A>A', '40': 'v<A<A>>^AvAA^Av<<A>>^AvA<^A>A', '41': 'v<A<A>>^AvA<^A>A', '42': 'v<A<A>>^AvAA^A<A>A', '43': 'v<A<A>>^AvAA^AA<A>A', '45': 'v<A>^A<A>A', '46': 'v<A>^AA<A>A', '47': 'v<<A>>^AvA^A', '48': 'v<<A>>^Av<A>>A^A<A>A', '49': 'v<<A>>^Av<A>>A^AA<A>A', '4A': 'v<A<A>>^AvAA^AAv<<A>>^AvA<^A>A', '50': 'v<A<A>>^AAvA<^A>A', '51': 'v<A<A>>^Av<<A>>^AvAA<^A>A', '52': 'v<A<A>>^AvA<^A>A', '53': 'v<A<A>>^AvAA^A<A>A', '54': 'v<A<AA>>^AvAA<^A>A', '56': 'v<A>^A<A>A', '57': 'v<<A>>^Av<A<A>>^AvAA<^A>A', '58': 'v<<A>>^AvA^A', '59': 'v<<A>>^Av<A>>A^A<A>A', '5A': 'v<A<A>>^AAvAA^A<A>A', '60': 'v<A<A>>^AAv<<A>>^AvAA<^A>A', '61': 'v<A<A>>^Av<<A>>^AAvAA<^A>A', '62': 'v<A<A>>^Av<<A>>^AvAA<^A>A', '63': 'v<A<A>>^AvA<^A>A', '64': 'v<A<AA>>^AAvAA<^A>A', '65': 'v<A<AA>>^AvAA<^A>A', '67': 'v<<A>>^Av<A<A>>^AAvAA<^A>A', '68': 'v<<A>>^Av<A<A>>^AvAA<^A>A', '69': 'v<<A>>^AvA^A', '6A': 'v<A<A>>^AAvA<^A>A', '70': 'v<A<A>>^AAvAA^Av<<A>>^AvA<^A>A', '71': 'v<A<A>>^AAvA<^A>A', '72': 'v<A<A>>^AAvAA^A<A>A', '73': 'v<A<A>>^AAvAA^AA<A>A', '74': 'v<A<A>>^AvA<^A>A', '75': 'v<A<A>>^AvAA^A<A>A', '76': 'v<A<A>>^AvAA^AA<A>A', '78': 'v<A>^A<A>A', '79': 'v<A>^AA<A>A', '7A': 'v<A<A>>^AAvAA^AAv<<A>>^AvA<^A>A', '80': 'v<A<A>>^AAAvA<^A>A', '81': 'v<A<A>>^AAv<<A>>^AvAA<^A>A', '82': 'v<A<A>>^AAvA<^A>A', '83': 'v<A<A>>^AAvAA^A<A>A', '84': 'v<A<A>>^Av<<A>>^AvAA<^A>A', '85': 'v<A<A>>^AvA<^A>A', '86': 'v<A<A>>^AvAA^A<A>A', '87': 'v<A<AA>>^AvAA<^A>A', '89': 'v<A>^A<A>A', '8A': 'v<A<A>>^AAAvAA^A<A>A', '90': 'v<A<A>>^AAAv<<A>>^AvAA<^A>A', '91': 'v<A<A>>^AAv<<A>>^AAvAA<^A>A', '92': 'v<A<A>>^AAv<<A>>^AvAA<^A>A', '93': 'v<A<A>>^AAvA<^A>A', '94': 'v<A<A>>^Av<<A>>^AAvAA<^A>A', '95': 'v<A<A>>^Av<<A>>^AvAA<^A>A', '96': 'v<A<A>>^AvA<^A>A', '97': 'v<A<AA>>^AAvAA<^A>A', '98': 'v<A<AA>>^AvAA<^A>A', '9A': 'v<A<A>>^AAAvA<^A>A', 'A0': 'v<A<AA>>^AvAA<^A>A', 'A1': 'v<<A>>^Av<A<A>>^AAvAA<^A>A', 'A2': 'v<<A>>^Av<A<A>>^AvAA<^A>A', 'A3': 'v<<A>>^AvA^A', 'A4': 'v<<A>>^AAv<A<A>>^AAvAA<^A>A', 'A5': 'v<<A>>^AAv<A<A>>^AvAA<^A>A', 'A6': 'v<<A>>^AAvA^A', 'A7': 'v<<A>>^AAAv<A<A>>^AAvAA<^A>A', 'A8': 'v<<A>>^AAAv<A<A>>^AvAA<^A>A', 'A9': 'v<<A>>^AAAvA^A'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def direction_robot(directions):\n",
+    "    result = ''\n",
+    "    result += movement_map.get(f'A{directions[0]}')+'A'\n",
+    "    for i in range(len(directions)-1):\n",
+    "        movement = directions[i:i+2]\n",
+    "        result += movement_map.get(movement, '')+'A'\n",
+    "    return result\n",
+    "\n",
+    "def stack_robots(r, n):\n",
+    "    for _ in range(n):\n",
+    "        r = direction_robot(r)\n",
+    "    return r\n",
+    "\n",
+    "def generate_num_map(ds):\n",
+    "    result = {}\n",
+    "    def get_paths(i):\n",
+    "        for nodes in nx.all_shortest_paths(g, i[0], i[1]):\n",
+    "            yield ''.join([ds[nodes[n], nodes[n+1]] for n in range(len(nodes)-1)]+['A'])\n",
+    "\n",
+    "    print(list(get_paths('A0')))\n",
+    "    for i in itertools.permutations('0123456789A', 2):\n",
+    "        result[''.join(i)] = min([stack_robots(x, 2) for x in get_paths(i)])\n",
+    "    return result\n",
+    "\n",
+    "num_map = generate_num_map(nmap)\n",
+    "print(num_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v<<A>>^AvA^Av<<A>>^AAv<A<A>>^AAvAA<^A>A\n",
+      "029A v<A<AA>>^AvAA<^A>Av<<A>>^AvA^Av<<A>>^AAv<A>>A^A<A>Av<A<A>>^AAAvA<^A>A 69\n",
+      "980A v<<A>>^AAAvA^Av<A<AA>>^AvAA<^A>Av<A<A>>^AAAvA<^A>Av<A>^A<A>A 60\n",
+      "179A v<<A>>^Av<A<A>>^AAvAA<^A>Av<<A>>^AAvA^Av<A>^AA<A>Av<A<A>>^AAAvA<^A>A 68\n",
+      "456A v<<A>>^AAv<A<A>>^AAvAA<^A>Av<A>^A<A>Av<A>^A<A>Av<A<A>>^AAvA<^A>A 64\n",
+      "379A v<<A>>^AvA^Av<<A>>^AAv<A<A>>^AAvAA<^A>Av<A>^AA<A>Av<A<A>>^AAAvA<^A>A 68\n"
      ]
     }
    ],
    "source": [
     "def day21():\n",
-    "    print(data(0))\n",
+    "    codes = data(0)\n",
+    "\n",
+    "    def press_code(code):\n",
+    "        result = num_map['A'+code[0]]\n",
+    "        # print(result)\n",
+    "        for i in range(len(code)-1):\n",
+    "            result += num_map[code[i:i+2]]\n",
+    "            # print(code[i:i+2], num_map[code[i:i+2]])\n",
+    "        return result\n",
+    "\n",
+    "    print(press_code('37'))\n",
+    "\n",
+    "    for code in codes:\n",
+    "        result = press_code(code)\n",
+    "        print(code, result, len(result))\n",
+    "\n",
     "day21()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movement_map = {\n",
+    "    '^<': 'v<',\n",
+    "    '^>': 'v>',\n",
+    "    '^v': 'v',\n",
+    "    '^A': '>',\n",
+    "    '<^': '>^',\n",
+    "    '<>': '>>',\n",
+    "    '<v': '>',\n",
+    "    '<A': '>>^',\n",
+    "    '>^': '<^',\n",
+    "    '><': '<<',\n",
+    "    '>v': '<',\n",
+    "    '>A': '^',\n",
+    "    'v^': '^',\n",
+    "    'v<': '<',\n",
+    "    'v>': '>>',\n",
+    "    'vA': '>^',\n",
+    "    'A^': '<',\n",
+    "    'A<': 'v<<',\n",
+    "    'A>': 'v',\n",
+    "    'Av': 'v<',\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['7' '8' '9']\n",
+      " ['4' '5' '6']\n",
+      " ['1' '2' '3']\n",
+      " ['' '0' 'A']] 4 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "numpad = np.array([\n",
+    "    [7, 8, 9],\n",
+    "    [4, 5, 6],\n",
+    "    [1, 2, 3],\n",
+    "    ['', 0, 'A']\n",
+    "])\n",
+    "ymax, xmax = numpad.shape\n",
+    "print(numpad, ymax, xmax)\n",
+    "\n",
+    "def get_path(a, b):\n",
+    "    def get_neighbors(current, _):\n",
+    "        node, history = current\n",
+    "        bias = [history[-1]] if history else []\n",
+    "        for i in bias + [1j, -1j, 1, -1]:\n",
+    "            new = node + i\n",
+    "            y, x = yx(new)\n",
+    "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
+    "                continue\n",
+    "            if y == ymax-1 and x == 0:\n",
+    "                continue\n",
+    "            yield (new, tuple(list(history) + [i]))\n",
+    "\n",
+    "    def end_condition(current, _):\n",
+    "        return numpad[*yx(current[0])] == b\n",
+    "\n",
+    "    _, end = search((icoord(*np.argwhere(numpad == a)[0])\n",
+    ", tuple()), get_neighbors, end_condition)\n",
+    "    return end[1]\n",
+    "\n",
+    "number_map = {}\n",
+    "for i in itertools.permutations('0123456789A', 2):\n",
+    "    number_map[i] = get_path(i[0], i[1])\n",
+    "\n",
+    "movement_map = {\n",
+    "    '^<': 'v<',\n",
+    "    '^>': 'v>',\n",
+    "    '^v': 'v',\n",
+    "    '^A': '>',\n",
+    "    '<^': '>^',\n",
+    "    '<>': '>>',\n",
+    "    '<v': '>',\n",
+    "    '<A': '>>^',\n",
+    "    '>^': '<^',\n",
+    "    '><': '<<',\n",
+    "    '>v': '<',\n",
+    "    '>A': '^',\n",
+    "    'v^': '^',\n",
+    "    'v<': '<',\n",
+    "    'v>': '>>',\n",
+    "    'vA': '>^',\n",
+    "    'A^': '<',\n",
+    "    'A<': 'v<<',\n",
+    "    'A>': 'v',\n",
+    "    'Av': 'v<',\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'01': 'v<<A>>^Av<A<A>>^A', '02': 'v<<A>>^A', '03': 'v<<A>>^Av<A>>A^A', '04': 'v<<A>>^AAv<A<A>>^A', '05': 'v<<A>>^AA', '06': 'v<<A>>^AAv<A>>A^A', '07': 'v<<A>>^AAAv<A<A>>^A', '08': 'v<<A>>^AAA', '09': 'v<<A>>^AAAv<A>>A^A', '0A': 'v<A>^A', '10': 'v<A>^Av<<A>>^A', '12': 'v<A>^A', '13': 'v<A>^AA', '14': 'v<<A>>^A', '15': 'v<<A>>^Av<A>>A^A', '16': 'v<<A>>^Av<A>>A^AA', '17': 'v<<A>>^AA', '18': 'v<<A>>^AAv<A>>A^A', '19': 'v<<A>>^AAv<A>>A^AA', '1A': 'v<A>^AAv<<A>>^A', '20': 'v<A<A>>^A', '21': 'v<A<AA>>^A', '23': 'v<A>^A', '24': 'v<<A>>^Av<A<A>>^A', '25': 'v<<A>>^A', '26': 'v<<A>>^Av<A>>A^A', '27': 'v<<A>>^AAv<A<A>>^A', '28': 'v<<A>>^AA', '29': 'v<<A>>^AAv<A>>A^A', '2A': 'v<A<A>>^AvAA^A', '30': 'v<A<A>>^Av<<A>>^A', '31': 'v<A<AA>>^AA', '32': 'v<A<AA>>^A', '34': 'v<<A>>^Av<A<A>>^AA', '35': 'v<<A>>^Av<A<A>>^A', '36': 'v<<A>>^A', '37': 'v<<A>>^AAv<A<A>>^AA', '38': 'v<<A>>^AAv<A<A>>^A', '39': 'v<<A>>^AA', '3A': 'v<A<A>>^A', '40': 'v<A<A>>^AvAA^Av<<A>>^A', '41': 'v<A<A>>^A', '42': 'v<A<A>>^AvAA^A', '43': 'v<A<A>>^AvAA^AA', '45': 'v<A>^A', '46': 'v<A>^AA', '47': 'v<<A>>^A', '48': 'v<<A>>^Av<A>>A^A', '49': 'v<<A>>^Av<A>>A^AA', '4A': 'v<A<A>>^AvAA^AAv<<A>>^A', '50': 'v<A<A>>^AA', '51': 'v<A<A>>^Av<<A>>^A', '52': 'v<A<A>>^A', '53': 'v<A<A>>^AvAA^A', '54': 'v<A<AA>>^A', '56': 'v<A>^A', '57': 'v<<A>>^Av<A<A>>^A', '58': 'v<<A>>^A', '59': 'v<<A>>^Av<A>>A^A', '5A': 'v<A<A>>^AAvAA^A', '60': 'v<A<A>>^AAv<<A>>^A', '61': 'v<A<A>>^Av<<A>>^AA', '62': 'v<A<A>>^Av<<A>>^A', '63': 'v<A<A>>^A', '64': 'v<A<AA>>^AA', '65': 'v<A<AA>>^A', '67': 'v<<A>>^Av<A<A>>^AA', '68': 'v<<A>>^Av<A<A>>^A', '69': 'v<<A>>^A', '6A': 'v<A<A>>^AA', '70': 'v<A<A>>^AAvAA^Av<<A>>^A', '71': 'v<A<A>>^AA', '72': 'v<A<A>>^AAvAA^A', '73': 'v<A<A>>^AAvAA^AA', '74': 'v<A<A>>^A', '75': 'v<A<A>>^AvAA^A', '76': 'v<A<A>>^AvAA^AA', '78': 'v<A>^A', '79': 'v<A>^AA', '7A': 'v<A<A>>^AAvAA^AAv<<A>>^A', '80': 'v<A<A>>^AAA', '81': 'v<A<A>>^AAv<<A>>^A', '82': 'v<A<A>>^AA', '83': 'v<A<A>>^AAvAA^A', '84': 'v<A<A>>^Av<<A>>^A', '85': 'v<A<A>>^A', '86': 'v<A<A>>^AvAA^A', '87': 'v<A<AA>>^A', '89': 'v<A>^A', '8A': 'v<A<A>>^AAAvAA^A', '90': 'v<A<A>>^AAAv<<A>>^A', '91': 'v<A<A>>^AAv<<A>>^AA', '92': 'v<A<A>>^AAv<<A>>^A', '93': 'v<A<A>>^AA', '94': 'v<A<A>>^Av<<A>>^AA', '95': 'v<A<A>>^Av<<A>>^A', '96': 'v<A<A>>^A', '97': 'v<A<AA>>^AA', '98': 'v<A<AA>>^A', '9A': 'v<A<A>>^AAA', 'A0': 'v<A<AA>>^A', 'A1': 'v<<A>>^Av<A<A>>^AA', 'A2': 'v<<A>>^Av<A<A>>^A', 'A3': 'v<<A>>^A', 'A4': 'v<<A>>^AAv<A<A>>^AA', 'A5': 'v<<A>>^AAv<A<A>>^A', 'A6': 'v<<A>>^AA', 'A7': 'v<<A>>^AAAv<A<A>>^AA', 'A8': 'v<<A>>^AAAv<A<A>>^A', 'A9': 'v<<A>>^AAA'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(num_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "? v<A<AA>>^AvAA<^A>Av<<A>>^AvA^Av<A>^Av<<A>^A>AAvA^Av<A<A>>^AAAvA<^A>A\n",
+      "<A^A^^>AvvvA\n",
+      "v<<A>>^A<A>A<AAv>A^Av<AAA>^A\n",
+      "v<A<AA>>^AvAA<^A>Av<<A>>^AvA^Av<<A>>^AAv<A>>A^A<A>Av<A<A>>^AAAvA<^A>A\n",
+      "029A 69\n",
+      "^^^A<AvvvA>A\n",
+      "<AAA>Av<<A>>^Av<AAA>^AvA^A\n",
+      "v<<A>>^AAAvA^Av<A<AA>>^AvAA<^A>Av<A<A>>^AAAvA<^A>Av<A>^A<A>A\n",
+      "980A 60\n",
+      "^<<A^^A>>AvvvA\n",
+      "<Av<AA>>^A<AA>AvAA^Av<AAA>^A\n",
+      "v<<A>>^Av<A<A>>^AAvAA<^A>Av<<A>>^AAvA^Av<A>^AA<A>Av<A<A>>^AAAvA<^A>A\n",
+      "179A 68\n",
+      "^^<<A>A>AvvA\n",
+      "<AAv<AA>>^AvA^AvA^Av<AA>^A\n",
+      "v<<A>>^AAv<A<A>>^AAvAA<^A>Av<A>^A<A>Av<A>^A<A>Av<A<A>>^AAvA<^A>A\n",
+      "456A 64\n",
+      "^A^^<<A>>AvvvA\n",
+      "<A>A<AAv<AA>>^AvAA^Av<AAA>^A\n",
+      "v<<A>>^AvA^Av<<A>>^AAv<A<A>>^AAvAA<^A>Av<A>^AA<A>Av<A<A>>^AAAvA<^A>A\n",
+      "379A 68\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day21():\n",
+    "    codes = data(0)\n",
+    "\n",
+    "    def convert_dir(i):\n",
+    "        if i.imag < 0:\n",
+    "            return '^'\n",
+    "        elif i.imag:\n",
+    "            return 'v'\n",
+    "        elif i.real < 0:\n",
+    "            return '<'\n",
+    "        return '>'\n",
+    "\n",
+    "    def direction_robot(directions):\n",
+    "        result = ''\n",
+    "        result += movement_map.get(f'A{directions[0]}')+'A'\n",
+    "        for i in range(len(directions)-1):\n",
+    "            movement = directions[i:i+2]\n",
+    "            result += movement_map.get(movement, '')+'A'\n",
+    "        return result\n",
+    "\n",
+    "\n",
+    "    def num_robot(code):\n",
+    "        def _num_robot(directions):\n",
+    "            yield number_map.get(('A', directions[0]))\n",
+    "            for i in range(len(directions)-1):\n",
+    "                move = directions[i:i+2]\n",
+    "                yield number_map[(move[0], move[1])]\n",
+    "\n",
+    "        result = ''\n",
+    "        for move in _num_robot(code):\n",
+    "            result += ''.join(convert_dir(x) for x in move)+'A'\n",
+    "        return result\n",
+    "\n",
+    "    def stack_robots(code):\n",
+    "        r1 = num_robot(code)\n",
+    "        print(r1)\n",
+    "        r2 = direction_robot(r1)\n",
+    "        print(r2)\n",
+    "        r3 = direction_robot(r2)\n",
+    "        print(r3)\n",
+    "        return r3\n",
+    "    \n",
+    "    r2 = direction_robot('<A^A>^^AvvvA')\n",
+    "    r3 = direction_robot(r2)\n",
+    "    print('?', r3)\n",
+    "\n",
+    "    for code in codes:\n",
+    "        print(code, len(stack_robots(code)))\n",
+    "\n",
+    "day21()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68 60 68 64 64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
+    "    len('<vA<AA>>^AvAA<^A>A<v<A>>^AvA^A<vA>^A<v<A>^A>AAvA^A<v<A>A>^AAAvA<^A>A'),\n",
+    "    len('<v<A>>^AAAvA^A<vA<AA>>^AvAA<^A>A<v<A>A>^AAAvA<^A>A<vA>^A<A>A'),\n",
+    "    len('<v<A>>^A<vA<A>>^AAvAA<^A>A<v<A>>^AAvA^A<vA>^AA<A>A<v<A>A>^AAAvA<^A>A'),\n",
+    "    len('<v<A>>^AA<vA<A>>^AAvAA<^A>A<vA>^A<A>A<vA>^A<A>A<v<A>A>^AAvA<^A>A'),\n",
+    "    len('<v<A>>^AvA^A<vA<AA>>^AAvA<^A>AAvA^A<vA>^AA<A>A<v<A>A>^AAAvA<^A>A')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
