--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import heapq\n",
     "import math\n",
+    "import random\n",
     "from typing import Callable, TypeVar\n",
     "from collections import Counter, deque, defaultdict\n",
     "import itertools\n",
-    "from functools import cmp_to_key, cache\n",
+    "from functools import cmp_to_key, cache, lru_cache\n",
     "import regex as re\n",
     "from intervaltree import Interval, IntervalTree\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
@@ -1262,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,38 +1298,197 @@
     "    return g, ds\n",
     "\n",
     "nmap = num_map()\n",
-    "amap = arrow_map()"
+    "amap = arrow_map()\n",
+    "\n",
+    "def is_num(i):\n",
+    "    return 47 < ord(i) < 58\n",
+    "\n",
+    "def get_paths(i):\n",
+    "    if is_num(i[0]) or is_num(i[1]):\n",
+    "        return _get_paths(i, nmap)\n",
+    "    return _get_paths(i, amap)\n",
+    "\n",
+    "def _get_paths(i, ginfo):\n",
+    "    a, b = i\n",
+    "    g, ds = ginfo\n",
+    "    paths = list(nx.all_shortest_paths(g, a, b))\n",
+    "    return [''.join([ds[(path[i], path[i+1])] for i in range(len(path)-1)])+'A' for path in paths]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def press_code(code, n):\n",
+    "#     if not n:\n",
+    "#         return code\n",
+    "#     result = get_shortest_path('A'+code[0], n)\n",
+    "#     for i in range(len(code)-1):\n",
+    "#         # print(i, result, code[i:i+2])\n",
+    "#         result += get_shortest_path(code[i:i+2], n)\n",
+    "#     # print(result)\n",
+    "#     return result\n",
+    "\n",
+    "# def get_shortest_path(i, n):\n",
+    "#     return random.choice([press_code(option, n-1) for option in get_paths(i)])\n",
+    "\n",
+    "\n",
+    "# press_code('029A', 2)\n",
+    "# min([press_code('029A', 2) for i in range(1000)], key=len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['<A^A>^^AvvvA', '<A^A^>^AvvvA', '<A^A^^>AvvvA']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_path_sequences(code, start='A') :\n",
+    "    if not code:\n",
+    "        return ''\n",
+    "    for path in get_paths(start+code[0]):\n",
+    "        sequences = list(get_path_sequences(code[1:], start=code[0]))\n",
+    "        # print(path, sequences)\n",
+    "        if not sequences:\n",
+    "            yield path\n",
+    "        for sequence in sequences:\n",
+    "            yield path+sequence\n",
+    "\n",
+    "\n",
+    "list(get_path_sequences('029A'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A 0 2\n",
-      "0 2 2\n",
-      "2 9 2\n",
-      "9 A 2\n"
+      "86475783010\n",
+      "90594397580\n",
+      "93831469524\n",
+      "80732180764\n",
+      "80732180766\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "303836969158972"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def get_shortest(i, n):\n",
-    "    a, b = i\n",
-    "    print(a, b, n)\n",
+    "def get_path_sequences(code, start='A') :\n",
+    "    if not code:\n",
+    "        return [[]]\n",
+    "    for path in get_paths(start+code[0]):\n",
+    "        sequences = list(get_path_sequences(code[1:], start=code[0]))\n",
+    "        # print(path, sequences)\n",
+    "        if not sequences:\n",
+    "            yield [path]\n",
+    "        for sequence in sequences:\n",
+    "            yield [path, *sequence]\n",
     "\n",
     "\n",
-    "def press_code(code):\n",
-    "    result = get_shortest('A'+code[0], 2)\n",
-    "    for i in range(len(code)-1):\n",
-    "        get_shortest(code[i:i+2], 2)\n",
+    "@cache\n",
+    "def press_code(code, n):\n",
+    "    sequences = list(get_path_sequences(code))\n",
+    "    if not n:\n",
+    "        return min(len(''.join(sequence)) for sequence in sequences)\n",
+    "    return min(sum([press_code(c, n-1) for c in sequence]) for sequence in sequences)\n",
+    "\n",
+    "\n",
+    "def day21():\n",
+    "    codes = data(21)\n",
+    "\n",
+    "    result = 0\n",
+    "    for code in codes:\n",
+    "        cursed = press_code(code, 25)\n",
+    "        print(cursed)\n",
+    "        result += int(code[:-1])*cursed\n",
     "    return result\n",
     "\n",
-    "press_code('029A')"
+    "day21()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c <vA<AA>>^AvA^<A>AAAvA^A<v<A>A>^AvA^A<A>A<v<A>>^AvA^A<v<A>A>^AAAvA^<A>A\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "60830"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# def press_code(code, n):\n",
+    "#     if not n:\n",
+    "#         return code\n",
+    "#     result = get_shortest_path('A'+code[0], n)\n",
+    "#     for i in range(len(code)-1):\n",
+    "#         result += get_shortest_path(code[i:i+2], n)\n",
+    "#     return result\n",
+    "\n",
+    "def press_code(code, n):\n",
+    "    result = get_shortest_path('A'+code[0], n)\n",
+    "    for i in range(len(code)-1):\n",
+    "        result += get_shortest_path(code[i:i+2], n)\n",
+    "    return result\n",
+    "\n",
+    "@cache\n",
+    "def get_shortest_path(i, n):\n",
+    "    if n == 1:\n",
+    "        return get_paths(i)[0]\n",
+    "    return min([press_code(option, n-1) for option in get_paths(i)], key=len)\n",
+    "\n",
+    "\n",
+    "def day21():\n",
+    "    codes = data(21)\n",
+    "\n",
+    "    result = 0\n",
+    "    for code in codes:\n",
+    "        cursed = press_code(code, 3)\n",
+    "        print('c', cursed)\n",
+    "        result += int(code[:-1])*len(cursed)\n",
+    "        break\n",
+    "    return result\n",
+    "\n",
+    "day21()"
    ]
   },
   {
