--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import heapq\n",
     "import math\n",
-    "import random\n",
     "from typing import Callable, TypeVar\n",
     "from collections import Counter, deque, defaultdict\n",
     "import itertools\n",
@@ -1353,20 +1352,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['029A', '980A', '179A', '456A', '379A']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "18317943467"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def day22():\n",
-    "    print(data(0))\n",
+    "    starts = data(22, int)\n",
+    "    # print(starts)\n",
+    "\n",
+    "    def mixprune(n, s):\n",
+    "        return (n^s)%16777216\n",
+    "    def process(s):\n",
+    "        s = mixprune(s, s*64)\n",
+    "        s = mixprune(s, int(s/32))\n",
+    "        return mixprune(s, s*2048)\n",
+    "    def run(s, n):\n",
+    "        if not n:\n",
+    "            return s\n",
+    "        return run(process(s), n-1)\n",
+    "    \n",
+    "    return sum(run(start, 2000) for start in starts)\n",
+    "    \n",
+    "\n",
     "day22()"
    ]
   }
