--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1361,7 @@
        "18317943467"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1369,6 @@
    "source": [
     "def day22():\n",
     "    starts = data(22, int)\n",
-    "    # print(starts)\n",
     "\n",
     "    def mixprune(n, s):\n",
     "        return (n^s)%16777216\n",
@@ -1386,6 +1385,74 @@
     "    \n",
     "\n",
     "day22()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18317943467, 2018)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# slow: 20s\n",
+    "def day22():\n",
+    "    starts = data(22, int)\n",
+    "\n",
+    "    def mixprune(n, s):\n",
+    "        return (n^s)%16777216\n",
+    "    def process(s):\n",
+    "        s = mixprune(s, s*64)\n",
+    "        s = mixprune(s, int(s/32))\n",
+    "        return mixprune(s, s*2048)\n",
+    "    def run(s, n):\n",
+    "        for _ in range(n):\n",
+    "            s = process(s)\n",
+    "            yield s%10\n",
+    "        yield s\n",
+    "\n",
+    "    final, c = 0, Counter()\n",
+    "    for start in starts:\n",
+    "        values = {}\n",
+    "        *prices, last = np.array(list(run(start, 2000)))\n",
+    "        final += last\n",
+    "        for i,v in enumerate(np.lib.stride_tricks.sliding_window_view(np.diff(prices), 4)):\n",
+    "            key = tuple(v)\n",
+    "            if key not in values:\n",
+    "                values[key] = prices[i+4]\n",
+    "        c += values\n",
+    "    key = max(c, key=c.get)\n",
+    "    return int(final), int(c[key])\n",
+    "\n",
+    "day22()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3', '2024']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day23():\n",
+    "    print(data(0))\n",
+    "day23()"
    ]
   }
  ],
