--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,43 +1358,6 @@
     {
      "data": {
       "text/plain": [
-       "18317943467"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def day22():\n",
-    "    starts = data(22, int)\n",
-    "\n",
-    "    def mixprune(n, s):\n",
-    "        return (n^s)%16777216\n",
-    "    def process(s):\n",
-    "        s = mixprune(s, s*64)\n",
-    "        s = mixprune(s, int(s/32))\n",
-    "        return mixprune(s, s*2048)\n",
-    "    def run(s, n):\n",
-    "        if not n:\n",
-    "            return s\n",
-    "        return run(process(s), n-1)\n",
-    "    \n",
-    "    return sum(run(start, 2000) for start in starts)\n",
-    "    \n",
-    "\n",
-    "day22()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "(18317943467, 2018)"
       ]
      },
@@ -1432,6 +1395,58 @@
     "        c += values\n",
     "    key = max(c, key=c.get)\n",
     "    return int(final), int(c[key])\n",
+    "\n",
+    "\n",
+    "day22()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18317943467, 2018)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day22():\n",
+    "    starts = data(22, int)\n",
+    "\n",
+    "    def mixprune(n, s):\n",
+    "        return (n^s)%16777216\n",
+    "    def process(s):\n",
+    "        s = mixprune(s, s*64)\n",
+    "        s = mixprune(s, int(s/32))\n",
+    "        return mixprune(s, s*2048)\n",
+    "    def run(s, n):\n",
+    "        for _ in range(n):\n",
+    "            s = process(s)\n",
+    "            yield s\n",
+    "\n",
+    "    final, counts = 0, Counter()\n",
+    "    for start in starts:\n",
+    "        seen = set()\n",
+    "        secrets = run(start, 2000)\n",
+    "        i = [next(secrets)%10 for _ in range(4)]\n",
+    "        previous, diffs = i[-1], (0, i[1]-i[0], i[2]-i[1], i[3]-i[2])\n",
+    "        for secret in secrets:\n",
+    "            price = secret%10\n",
+    "            diffs, previous = (diffs[1], diffs[2], diffs[3], price-previous), price\n",
+    "            if diffs not in seen:\n",
+    "                counts[diffs] += price\n",
+    "                seen.add(diffs)\n",
+    "        final += secret\n",
+    "\n",
+    "    key = max(counts, key=counts.get)\n",
+    "    return int(final), int(counts[key])\n",
     "\n",
     "day22()"
    ]
