--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -1453,20 +1453,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['1', '2', '3', '2024']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1083"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def day23():\n",
-    "    print(data(0))\n",
+    "    connections = data(23, lambda x: x.split('-'))\n",
+    "    g = nx.Graph()\n",
+    "    g.add_edges_from(connections)\n",
+    "\n",
+    "    def starts_t(x):\n",
+    "        return any([c for c in x if c.startswith('t')])\n",
+    "\n",
+    "    three_cycles = nx.simple_cycles(g, 3)\n",
+    "    return len([x for x in three_cycles if starts_t(x)])\n",
+    "\n",
+    "day23()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'as,bu,cp,dj,ez,fd,hu,it,kj,nx,pp,xh,yu'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day23():\n",
+    "    connections = data(23, lambda x: x.split('-'))\n",
+    "    g = nx.Graph()\n",
+    "    g.add_edges_from(connections)\n",
+    "\n",
+    "    largest_clique = max(list(nx.find_cliques(g)), key=len)\n",
+    "    return ','.join(sorted(largest_clique))\n",
+    "\n",
     "day23()"
    ]
   }
