--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -1453,16 +1453,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1083"
+       "(1083, 'as,bu,cp,dj,ez,fd,hu,it,kj,nx,pp,xh,yu')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1475,39 +1475,33 @@
     "\n",
     "    def starts_t(x):\n",
     "        return any([c for c in x if c.startswith('t')])\n",
-    "\n",
-    "    three_cycles = nx.simple_cycles(g, 3)\n",
-    "    return len([x for x in three_cycles if starts_t(x)])\n",
+    "    \n",
+    "    cliques = list(nx.enumerate_all_cliques(g))\n",
+    "    part1 = len([x for x in cliques if len(x) == 3 and starts_t(x)])\n",
+    "    part2 = ','.join(sorted(max(cliques, key=len)))\n",
+    "    return part1, part2    \n",
     "\n",
     "day23()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'as,bu,cp,dj,ez,fd,hu,it,kj,nx,pp,xh,yu'"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['kh-tc', 'qp-kh', 'de-cg', 'ka-co', 'yn-aq', 'qp-ub', 'cg-tb', 'vc-aq', 'tb-ka', 'wh-tc', 'yn-cg', 'kh-ub', 'ta-co', 'de-co', 'tc-td', 'tb-wq', 'wh-td', 'ta-ka', 'td-qp', 'aq-cg', 'wq-ub', 'ub-vc', 'de-ta', 'wq-aq', 'wq-vc', 'wh-yn', 'ka-de', 'kh-ta', 'co-tc', 'wh-qp', 'tb-vc', 'td-yn']\n"
+     ]
     }
    ],
    "source": [
-    "def day23():\n",
-    "    connections = data(23, lambda x: x.split('-'))\n",
-    "    g = nx.Graph()\n",
-    "    g.add_edges_from(connections)\n",
+    "def day24():\n",
+    "    print(data(0))\n",
     "\n",
-    "    largest_clique = max(list(nx.find_cliques(g)), key=len)\n",
-    "    return ','.join(sorted(largest_clique))\n",
-    "\n",
-    "day23()"
+    "day24()"
    ]
   }
  ],
