--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -1503,6 +1503,74 @@
     "\n",
     "day24()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66055249060558"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day25():\n",
+    "    text = data(24)\n",
+    "    split = text.index('')\n",
+    "    values = {y[0]:int(y[1]) for y in (x.split(': ') for x in text[:split])}\n",
+    "\n",
+    "    class Gate:\n",
+    "        def __init__(self, text):\n",
+    "            self.a, self.op, self.b, self.c = text\n",
+    "            self.children = set()\n",
+    "        def add_child(self, child):\n",
+    "            self.children.add(child)\n",
+    "        def __repr__(self):\n",
+    "            return f'{self.a} {self.op} {self.b} -> {self.c}'\n",
+    "\n",
+    "    gates = {gate.c:gate for gate in (Gate(re.findall(r'(...) (AND|OR|XOR) (...) -> (...)', x)[0]) for x in text[split+1:])}\n",
+    "    # print(gates)\n",
+    "    def run(c):\n",
+    "        gate = gates[c]\n",
+    "        a, op, b = gate.a, gate.op, gate.b\n",
+    "        match op:\n",
+    "            case 'AND':\n",
+    "                values[c] = values[a] and values[b]\n",
+    "            case 'OR':\n",
+    "                values[c] = values[a] or values[b]\n",
+    "            case 'XOR':\n",
+    "                values[c] = values[a] ^ values[b]\n",
+    "        return gate\n",
+    "    \n",
+    "    q = deque()\n",
+    "    for c in gates:\n",
+    "        gate = gates[c]\n",
+    "        if gate.a[0] in ('x', 'y') and gate.b[0] in ('x', 'y'):\n",
+    "            q.append(c)\n",
+    "        if gate.a in gates:\n",
+    "            gates[gate.a].add_child(gate)\n",
+    "        if gate.b in gates:\n",
+    "            gates[gate.b].add_child(gate)\n",
+    "    while q:\n",
+    "        c = q.popleft()\n",
+    "        # print(c)\n",
+    "        gate = run(c)\n",
+    "        for child in gate.children:\n",
+    "            if child.a in values and child.b in values:\n",
+    "                q.append(child.c)\n",
+    "\n",
+    "    b = ''.join((str(values[k])) for k in (sorted([x for x in values if x.startswith('z')], reverse=True)))\n",
+    "    return int(b, 2)\n",
+    "\n",
+    "day25()"
+   ]
   }
  ],
  "metadata": {
